# zoltar

./: .gitignore  .travis.yml  NOTICE  README.md  RELEASE.md  build.sbt  catalog-info.yaml  checkstyle.xml  docs.sbt  findbugsexclude.xml  getting-started.html  index.html  javadoc.html  license.html  page.st  pom.xml  release.html  settings.xml  suppressions.xml
.github/: dependabot.yml
.models/training/iris/: setup.cfg
.models/training/iris/iris/: tensorflow.py  xgboost.py
apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
apollo-service-example/: Dockerfile  README.md  findbugsexclude.xml  ml-serving-example.sh  pom.xml  service-info.yaml
docs/: build.sbt
model-serving-core/: pom.xml
model-serving-featran/: pom.xml
model-serving-models/: pom.xml
model-serving-tensorflow/: pom.xml
model-serving-tests/: pom.xml
model-serving-xgboost/: pom.xml
modules/: featran.html  index.html  metrics.html  mlengine.html  tensorflow.html  xgboost.html
partials/: nav.st  social.st
scripts/: data-integration-test-a20d1bb2e128.json.enc  deploy.sh  test.sh
search/: search_index.json
zoltar-api/: pom.xml
zoltar-bom/: pom.xml
zoltar-core/: pom.xml
zoltar-featran/: pom.xml
zoltar-jmh/: pom.xml
zoltar-metrics/: pom.xml
zoltar-mlengine/: pom.xml
zoltar-models/: pom.xml
zoltar-tensorflow/: pom.xml
zoltar-tests/: pom.xml
zoltar-xgboost/: pom.xml
(+447 files in other folders)
