[metadata]
name = model_serving_model_train
long_description = file: README.md
url = https://ghe.spotify.net/ml/model-serving
license = Apache-2
requires-python = >=2.7
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords =
    tensorflow
    xgboost

[options]
packages = find:

[global]
setup-hooks =
    pbr.hooks.setup_hook

[flake8]
max-line-length = 100
format = pylint
statistics = 1
show-source = 1
exclude = build,.git,.circleci,.coverage,.eggs,.gitignore,.idea,coverage,dist,*.egg*,venv
inline-quotes = "
multiline-quotes = "
accept-encodings = utf-8
import-order-style = pep8

[nosetests]
with-coverage = 1
cover-package = find:
cover-inclusive = 1
cover-xml = 1
cover-xml-file = coverage/coverage.xml
